--- a/index.html
+++ b/index.html
@@ -50,7 +50,6 @@
             padding: 1.5rem 1rem;
         }
 
-        /* --- Updated Compact Header --- */
         .header {
             display: flex;
             align-items: center;
@@ -67,7 +66,7 @@
         }
 
         .header h1 {
-            font-size: 1.5rem; /* More compact */
+            font-size: 1.5rem;
             margin: 0;
             background: linear-gradient(90deg, var(--primary), #8b5cf6);
             -webkit-background-clip: text;
@@ -75,7 +74,6 @@
             font-weight: 800;
         }
 
-        /* Search & Filter Bar */
         .sticky-controls {
             position: sticky;
             top: 1rem;
@@ -112,7 +110,6 @@
 
         .search-icon { position: absolute; right: 1.2rem; top: 50%; transform: translateY(-50%); color: var(--text-muted); }
 
-        /* Filter Pills */
         .filter-container {
             display: flex;
             gap: 0.5rem;
@@ -137,7 +134,6 @@
             border-color: var(--primary);
         }
 
-        /* Employee Cards */
         .dept-section { margin-bottom: 2.5rem; }
         
         .dept-title {
@@ -236,7 +232,6 @@
             font-weight: 800;
         }
 
-        /* --- Eye-catching Company Info Section --- */
         .company-info-section {
             margin-top: 4rem;
             background: var(--bg-card);
@@ -267,22 +262,11 @@
         }
         .info-block-content a:hover { color: var(--primary); }
 
-        .empty-state { text-align: center; padding: 4rem; color: var(--text-muted); }
-        .skeleton { background: var(--border-color); animation: pulse 1.5s infinite ease-in-out; border-radius: 4px; }
-        @keyframes pulse { 0% { opacity: 0.6; } 50% { opacity: 0.3; } 100% { opacity: 0.6; } }
-
-        footer {
-            text-align: center;
-            margin-top: 2rem;
-            padding: 2rem;
-            color: var(--text-muted);
-            font-size: 0.75rem;
-        }
+        footer { text-align: center; margin-top: 2rem; padding: 2rem; color: var(--text-muted); font-size: 0.75rem; }
 
         @media (max-width: 600px) {
             .grid { grid-template-columns: 1fr; }
             .sticky-controls { top: 0; border-radius: 0 0 16px 16px; }
-            .header h1 { font-size: 1.2rem; }
         }
     </style>
 </head>
@@ -304,17 +288,12 @@
 
     <div id="loading-placeholder">
         <div class="grid">
-            <div class="card" style="height: 180px; opacity:0.5;">
-                <div class="skeleton" style="width: 45px; height: 45px; border-radius: 50%;"></div>
-                <div class="skeleton" style="width: 70%; height: 15px;"></div>
-                <div class="skeleton" style="width: 100%; height: 35px;"></div>
-            </div>
+            <div class="card" style="height: 180px; opacity:0.5;"><div class="skeleton"></div></div>
         </div>
     </div>
 
     <main id="main-content"></main>
 
-    <!-- Company Public Information Section -->
     <section class="company-info-section">
         <div class="info-block">
             <i class="fas fa-map-marker-alt"></i>
@@ -342,13 +321,10 @@
         </div>
     </section>
 
-    <footer>
-        توسعه یافته توسط واحد IT | ۱۴۰۴
-    </footer>
+    <footer>توسعه یافته توسط واحد IT | ۱۴۰۴</footer>
 </div>
 
 <script>
-    // Logic remains identical as requested
     const CONFIG = {
         fileName: 'numbers.xlsx',
         cols: { dept: 'واحد', name: 'نام', family: 'خانوادگی', role: 'سمت', ext: 'داخلی', email: 'ایمیل' }
@@ -357,7 +333,6 @@
     let allData = [];
     let currentFilter = 'همه';
 
-    // Helper function for Persian Numbers
     const toPersian = (num) => String(num).replace(/\d/g, d => '۰۱۲۳۴۵۶۷۸۹'[d]);
 
     async function init() {
@@ -369,6 +344,8 @@
             const raw = XLSX.utils.sheet_to_json(sheet);
 
             allData = raw.map(item => ({
+                firstName: item[CONFIG.cols.name] || '',
+                lastName: item[CONFIG.cols.family] || '', // Stored for sorting
                 fullName: `${item[CONFIG.cols.name] || ''} ${item[CONFIG.cols.family] || ''}`.trim(),
                 dept: item[CONFIG.cols.dept] || 'سایر',
                 role: item[CONFIG.cols.role] || 'کارمند',
@@ -380,13 +357,10 @@
             renderUI();
             document.getElementById('loading-placeholder').style.display = 'none';
             document.getElementById('controls').style.display = 'block';
+            document.querySelectorAll('.pn').forEach(el => el.innerText = toPersian(el.innerText));
 
         } catch (err) {
-            document.getElementById('main-content').innerHTML = `
-                <div class="empty-state">
-                    <i class="fas fa-exclamation-circle fa-3x"></i>
-                    <p>خطا در بارگذاری فایل Excel. اطمینان حاصل کنید فایل numbers.xlsx در پوشه قرار دارد.</p>
-                </div>`;
+            document.getElementById('main-content').innerHTML = `<div class="empty-state"><p>خطا در بارگذاری فایل Excel.</p></div>`;
         }
     }
 
@@ -396,8 +370,7 @@
         main.innerHTML = '';
 
         const depts = ['همه', ...new Set(allData.map(d => d.dept))];
-        const pillContainer = document.getElementById('filter-pills');
-        pillContainer.innerHTML = depts.map(d => `
+        document.getElementById('filter-pills').innerHTML = depts.map(d => `
             <button class="filter-btn ${currentFilter === d ? 'active' : ''}" onclick="setFilter('${d}')">${d}</button>
         `).join('');
 
@@ -407,11 +380,6 @@
             return matchSearch && matchDept;
         });
 
-        if (filtered.length === 0) {
-            main.innerHTML = '<div class="empty-state"><i class="fas fa-search fa-3x"></i><p>موردی یافت نشد!</p></div>';
-            return;
-        }
-
         const groups = filtered.reduce((acc, obj) => {
             acc[obj.dept] = acc[obj.dept] || [];
             acc[obj.dept].push(obj);
@@ -419,7 +387,12 @@
         }, {});
 
         Object.keys(groups).forEach(dept => {
-            groups[dept].sort((a, b) => (b.isManager - a.isManager) || a.fullName.localeCompare(b.fullName, 'fa'));
+            // Updated Sorting Logic: Managers first, then Alphabetical by Last Name
+            groups[dept].sort((a, b) => {
+                if (a.isManager && !b.isManager) return -1;
+                if (!a.isManager && b.isManager) return 1;
+                return a.lastName.localeCompare(b.lastName, 'fa');
+            });
             
             const section = document.createElement('div');
             section.className = 'dept-section';
@@ -437,18 +410,12 @@
                                 </div>
                             </div>
                             <div class="contact-row">
-                                <a href="tel:${p.ext}" class="contact-link">
-                                    <i class="fas fa-phone-alt" style="color:var(--success)"></i>
-                                    <span>${toPersian(p.ext)}</span>
-                                </a>
+                                <a href="tel:${p.ext}" class="contact-link"><i class="fas fa-phone-alt" style="color:var(--success)"></i><span>${toPersian(p.ext)}</span></a>
                                 <i class="far fa-copy copy-trigger" onclick="copyText('${p.ext}')"></i>
                             </div>
                             ${p.email !== '-' ? `
                             <div class="contact-row">
-                                <a href="mailto:${p.email}" class="contact-link">
-                                    <i class="fas fa-envelope" style="color:var(--primary)"></i>
-                                    <span style="font-size:0.75rem">${p.email}</span>
-                                </a>
+                                <a href="mailto:${p.email}" class="contact-link"><i class="fas fa-envelope" style="color:var(--primary)"></i><span style="font-size:0.75rem">${p.email}</span></a>
                                 <i class="far fa-copy copy-trigger" onclick="copyText('${p.email}')"></i>
                             </div>` : ''}
                         </div>
@@ -459,19 +426,11 @@
         });
     }
 
-    function setFilter(d) {
-        currentFilter = d;
-        renderUI();
-    }
-
-    function copyText(txt) {
-        navigator.clipboard.writeText(txt);
-        alert('کپی شد: ' + toPersian(txt));
-    }
-
+    function setFilter(d) { currentFilter = d; renderUI(); }
+    function copyText(txt) { navigator.clipboard.writeText(txt); alert('کپی شد: ' + toPersian(txt)); }
     function stringToColor(str) {
         let hash = 0;
-        for (let i = 0; i < str.length; i++) { hash = str.charCodeAt(i) + ((hash << 5) - hash); }
+        for (let i = 0; i < str.length; i++) hash = str.charCodeAt(i) + ((hash << 5) - hash);
         return `hsl(${hash % 360}, 60%, 45%)`;
     }
 
