--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         .header h1 {
             font-size: 1.5rem;
             margin: 0;
-            background: linear-gradient(90deg, var(--primary), #8b5cf6);
+            background: linear-gradient(90deg, #575756, #1e3f28);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             font-weight: 800;
@@ -300,6 +300,7 @@
             <div class="info-block-content">
                 <h4>نشانی شرکت</h4>
                 <p>تهران - میدان آرژانتین - خیابان الوند - بن بست آفرین - پلاک ۸ - طبقه ۴</p>
+                <p>کد پستی: <span class="pn">۱۵۱۴۹۲۶۳۳۷</span></p>
                 <a href="https://maps.app.goo.gl/wQndC3UNGHTJwPoJA" target="_blank" style="color:var(--primary); font-weight:bold;">[ مشاهده روی نقشه ]</a>
             </div>
         </div>
@@ -307,16 +308,28 @@
             <i class="fas fa-phone-volume"></i>
             <div class="info-block-content">
                 <h4>ارتباط با ما</h4>
-                <p>تلفن: <span class="pn">۰۲۱۵۸۱۷۹۰۰۰</span></p>
-                <p>کد پستی: <span class="pn">۱۵۱۴۹۲۶۳۳۷</span></p>
+                <p>
+                  تلفن:
+                  <a href="tel:+982158179000" class="pn">۰۲۱-۵۸۱۷۹۰۰۰</a>
+                </p>
+
             </div>
         </div>
         <div class="info-block">
             <i class="fas fa-globe"></i>
             <div class="info-block-content">
                 <h4>پل‌های ارتباطی</h4>
-                <p>ایمیل: info@hastitamin.com</p>
-                <p>وب‌سایت: <a href="https://hastitaamin.com" target="_blank">hastitaamin.com</a></p>
+                    <p>
+                      ایمیل:
+                      <a href="mailto:info@hastitaamin.com">info@hastitaamin.com</a>
+                    </p>
+                    
+                    <p>
+                      وب‌سایت:
+                      <a href="https://hastitaamin.com" target="_blank" rel="noopener noreferrer">
+                        hastitaamin.com
+                      </a>
+                    </p>
             </div>
         </div>
     </section>
