--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
         </div>
     </section>
 
-    <footer>توسعه یافته توسط واحد IT | ۱۴۰۴</footer>
+    <footer>تهیه شده توسط واحد مارکتینگ | ۱۴۰۴ | نسخه 1.2</footer>
 </div>
 
 <script>
