--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                 <h4>ارتباط با ما</h4>
                 <p>
                   تلفن:
-                  <a href="tel:+982158179000" class="pn">۰۲۱-۵۸۱۷۹۰۰۰</a>
+                  <a href="tel:+982158179000" class="pn">۵۸۱۷۹۰۰۰-۰۲۱</a>
                 </p>
 
             </div>
@@ -330,6 +330,13 @@
                         hastitaamin.com
                       </a>
                     </p>
+                    <p>
+                      لینکدین:
+                      <a href="https://www.linkedin.com/company/hasti-aryan-taamin" target="_blank" rel="noopener noreferrer">
+                        linkedin.com/company/hasti-aryan-taamin
+                      </a>
+                    </p>
+
             </div>
         </div>
     </section>
