--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                     <p>
                       لینکدین:
                       <a href="https://www.linkedin.com/company/hasti-aryan-taamin" target="_blank" rel="noopener noreferrer">
-                        linkedin.com/company/hasti-aryan-taamin
+                        Linkedin
                       </a>
                     </p>
 
